@@ -12,15 +12,11 @@ public class ProblemException extends RuntimeException {
         this(messageId, Map.of());
     }
 
-    public ProblemException(
-            String messageId,
-            Map<String, Object> parameters) {
+    public ProblemException(String messageId, Map<String, Object> parameters) {
         super(messageId);
 
         this.messageId = messageId;
-        this.parameters = parameters == null
-                ? Map.of()
-                : Collections.unmodifiableMap(parameters);
+        this.parameters = parameters == null ? Map.of() : Collections.unmodifiableMap(parameters);
     }
 
     public String messageId() {
